--- a/index.html
+++ b/index.html
@@ -66,14 +66,10 @@
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Selector para el tipo de producto (cereal) -->
-            <div class="flex flex-col">
+   <div class="flex flex-col">
                 <label for="producto" class="mb-1 font-semibold text-[#1f2937]">Producto:</label>
-                <select id="producto" required class="border border-[#1f2937] rounded px-3 py-2">
-                    <option value="Soja">Soja</option>
-                    <option value="Maíz">Maíz</option>
-                    <option value="Trigo">Trigo</option>
-                    <option value="Cebada">Cebada</option>
-                </select>
+                <input type="text" id="producto" placeholder="Ej: Soja, Maíz, etc." required
+                    class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para los kilogramos -->
             <div class="flex flex-col">
