--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <!-- Cuerpo de la página: Contiene todo el contenido visible -->
+
 <body class="bg-[#fefcf6] font-inter min-h-screen flex flex-col items-center p-4">
     <!-- Contenedor principal de la aplicación de cálculo de facturas -->
     <div id="app-container" class="w-full max-w-3xl bg-white p-6 rounded-xl shadow-md">
@@ -26,7 +27,7 @@
         <!-- Sección superior con el logo y el botón de cambio de tema -->
         <div class="bg-[#1f2937] p-6 -m-6 mb-6 rounded-t-xl text-white flex justify-between items-center relative">
             <!-- Logo de la empresa MC Negocios -->
-               <img src="assets/img/logo-mc-negocios.png" alt="Logo de MC Negocios"
+            <img src="assets/img/logo-mc-negocios.png" alt="Logo de MC Negocios"
                 class="w-full max-w-[200px] mx-auto mb-6 rounded-lg" />
 
             <!-- Botón para alternar entre el modo claro y oscuro -->
@@ -50,7 +51,7 @@
         </div>
         <!-- Título de la sección principal del formulario -->
         <div>
-            <h1 class="text-3xl font-bold text-center">Registro de Compra de Cereal</h1>
+            <h1 class="text-3xl font-bold text-center">Registro de Compra</h1>
         </div>
         <!-- Formulario para ingresar los datos de la compra de cereal -->
         <form id="compraForm" class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-8">
@@ -66,7 +67,7 @@
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Selector para el tipo de producto (cereal) -->
-   <div class="flex flex-col">
+            <div class="flex flex-col">
                 <label for="producto" class="mb-1 font-semibold text-[#1f2937]">Producto:</label>
                 <input type="text" id="producto" placeholder="Ej: Soja, Maíz, etc." required
                     class="border border-[#1f2937] rounded px-3 py-2" />
