se configura el share de df

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                 class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
                 Descargar Factura PDF
             </button>
+            <button id="sharePdfBtn" class="bg-[#e4b25f] hover:bg-[#c19a43] text-black font-bold py-2 px-4 rounded-full transition-colors duration-300">
+    Compartir PDF
+</button>
             <button id="newCalculationBtn"
                 class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
                 Nuevo Cálculo
