--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <!-- Campo de entrada para el porcentaje de descuento -->
             <div class="flex flex-col">
                 <label for="descuento" class="mb-1 font-semibold text-[#1f2937]">Descuento (%):</label>
-                <input type="number" id="descuento" value="0" placeholder="Ej: 5"
+                <input type="number" id="descuento" placeholder="Ej: 5"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el porcentaje de impuesto -->
             <div class="flex flex-col">
                 <label for="impuesto" class="mb-1 font-semibold text-[#1f2937]">Impuesto (%):</label>
-                <input type="number" id="impuesto" value="0" placeholder="Ej: 21"
+                <input type="number" id="impuesto"  placeholder="Ej: 21"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Botón para generar la factura, abarcando dos columnas en pantallas pequeñas -->
@@ -120,7 +120,7 @@
                 class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
                 Descargar Factura PDF
             </button>
-            <button id="sharePdfBtn" class="bg-[#e4b25f] hover:bg-[#c19a43] text-black font-bold py-2 px-4 rounded-full transition-colors duration-300">
+            <button id="sharePdfBtn" class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
     Compartir PDF
 </button>
             <button id="newCalculationBtn"
