--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <!-- Enlace a tu hoja de estilos personalizada (styles.css) -->
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/png" href="assets/img/favicon.png" />
 </head>
 
 <!-- Cuerpo de la página: Contiene todo el contenido visible -->
