cambio de color en textos de inputs

--- a/index.html
+++ b/index.html
@@ -58,42 +58,42 @@
         <form id="compraForm" class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-8">
             <!-- Campo de entrada para la fecha de la compra -->
             <div class="flex flex-col">
-                <label for="fecha" class="mb-1 font-semibold text-[#1f2937]">Fecha:</label>
+                <label for="fecha" class="mb-1 font-semibold">Fecha:</label>
                 <input type="date" id="fecha" required class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el número de carta de porte -->
             <div class="flex flex-col">
-                <label for="cartaPorte" class="mb-1 font-semibold text-[#1f2937]">N° Carta de Porte:</label>
+                <label for="cartaPorte" class="mb-1 font-semibold">N° Carta de Porte:</label>
                 <input type="text" id="cartaPorte" placeholder="Ej: 123456789" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Selector para el tipo de producto (cereal) -->
             <div class="flex flex-col">
-                <label for="producto" class="mb-1 font-semibold text-[#1f2937]">Producto:</label>
+                <label for="producto" class="mb-1 font-semibold">Producto:</label>
                 <input type="text" id="producto" placeholder="Ej: Soja, Maíz, etc." required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para los kilogramos -->
             <div class="flex flex-col">
-                <label for="kilos" class="mb-1 font-semibold text-[#1f2937]">Kilogramos:</label>
+                <label for="kilos" class="mb-1 font-semibold">Kilogramos:</label>
                 <input type="number" id="kilos" placeholder="Ej: 1000" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el precio por kilo -->
             <div class="flex flex-col">
-                <label for="precio" class="mb-1 font-semibold text-[#1f2937]">Precio por kilo ($):</label>
+                <label for="precio" class="mb-1 font-semibold">Precio por kilo ($):</label>
                 <input type="number" id="precio" placeholder="Ej: 0.50" step="0.01" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el porcentaje de descuento -->
             <div class="flex flex-col">
-                <label for="descuento" class="mb-1 font-semibold text-[#1f2937]">Descuento (%):</label>
+                <label for="descuento" class="mb-1 font-semibold">Descuento (%):</label>
                 <input type="number" id="descuento" placeholder="Ej: 5"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el porcentaje de impuesto -->
             <div class="flex flex-col">
-                <label for="impuesto" class="mb-1 font-semibold text-[#1f2937]">Impuesto (%):</label>
+                <label for="impuesto" class="mb-1 font-semibold">Impuesto (%):</label>
                 <input type="number" id="impuesto"  placeholder="Ej: 21"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
