--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
             <!-- Campo de entrada para los kilogramos -->
             <div class="flex flex-col">
                 <label for="kilos" class="mb-1 font-semibold">Kilogramos:</label>
-                <input type="number" id="kilos" placeholder="Ej: 1000" required
+                <input type="text" id="kilos" placeholder="Ej: 1000" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el precio por kilo -->
             <div class="flex flex-col">
                 <label for="precio" class="mb-1 font-semibold">Precio por kilo ($):</label>
-                <input type="number" id="precio" placeholder="Ej: 0.50" step="0.01" required
+                <input type="text" id="precio" placeholder="Ej: 0.50" step="0.01" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el porcentaje de descuento -->
             <div class="flex flex-col">
                 <label for="descuento" class="mb-1 font-semibold">Descuento (%):</label>
-                <input type="number" id="descuento" placeholder="Ej: 5"
+                <input type="text" id="descuento" placeholder="Ej: 5"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Campo de entrada para el porcentaje de impuesto -->
             <div class="flex flex-col">
                 <label for="impuesto" class="mb-1 font-semibold">Impuesto (%):</label>
-                <input type="number" id="impuesto"  placeholder="Ej: 21"
+                <input type="text" id="impuesto"  placeholder="Ej: 21"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
             <!-- Botón para generar la factura, abarcando dos columnas en pantallas pequeñas -->
