Cambie precio por kilo a precio por tonelada index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <!-- Campo de entrada para el precio por kilo -->
             <div class="flex flex-col">
-                <label for="precio" class="mb-1 font-semibold">Precio por kilo ($):</label>
+                <label for="precio" class="mb-1 font-semibold">Precio por TN ($):</label>
                 <input type="text" id="precio" placeholder="Ej: 0.50" step="0.01" required
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
