modificacion de place holder en el html

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 <input type="text" id="descuento" placeholder="Ej: 5"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
-            <!-- Campo de entrada para el porcentaje de impuesto -->
-            <div class="flex flex-col">
-                <label for="impuesto" class="mb-1 font-semibold">Impuesto (%):</label>
-                <input type="text" id="impuesto"  placeholder="Ej: 21"
-                    class="border border-[#1f2937] rounded px-3 py-2" />
-            </div>
+  <!-- Campo de entrada para el porcentaje de flete -->
+    <div class="flex flex-col">
+        <label for="flete" class="mb-1 font-semibold">Flete (%):</label>
+        <input type="text" id="flete" placeholder="Ej: 5"
+            class="border border-[#1f2937] rounded px-3 py-2" />
+    </div>
             <!-- Botón para generar la factura, abarcando dos columnas en pantallas pequeñas -->
             <div class="sm:col-span-2 flex justify-center mt-4">
                 <button type="submit" id="generateInvoiceBtn"
