--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 <input type="text" id="descuento" placeholder="Ej: 5"
                     class="border border-[#1f2937] rounded px-3 py-2" />
             </div>
-  <!-- Campo de entrada para el porcentaje de flete -->
-    <div class="flex flex-col">
-        <label for="flete" class="mb-1 font-semibold">Flete (%):</label>
-        <input type="text" id="flete" placeholder="Ej: 5"
-            class="border border-[#1f2937] rounded px-3 py-2" />
-    </div>
+            <!-- Campo de entrada para el porcentaje de flete -->
+<div class="flex flex-col">
+<label for="flete" class="mb-1 font-semibold">Flete ($):</label>
+<input type="text" id="flete" placeholder="Ej: 10000"
+                    class="border border-[#1f2937] rounded px-3 py-2" />
+</div>
             <!-- Botón para generar la factura, abarcando dos columnas en pantallas pequeñas -->
             <div class="sm:col-span-2 flex justify-center mt-4">
                 <button type="submit" id="generateInvoiceBtn"
@@ -121,9 +121,10 @@
                 class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
                 Descargar Factura PDF
             </button>
-            <button id="sharePdfBtn" class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
-    Compartir PDF
-</button>
+            <button id="sharePdfBtn"
+                class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
+                Compartir PDF
+            </button>
             <button id="newCalculationBtn"
                 class="bg-[#1f2937] text-white px-6 py-2 rounded shadow hover:bg-[#374151] transition font-semibold">
                 Nuevo Cálculo
