Cambie total por Cantidad Final index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap">Precio</th>
                         <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap">Descuento</th>
                         <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap">Impuesto</th>
-                        <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap">Total</th>
+                        <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap">Cantidad Final</th>
                         <th class="border border-[#1f2937] px-3 py-2 whitespace-nowrap"></th>
                     </tr>
                 </thead>
